--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,4 +16,8 @@
         android:id="@+id/profileFragment"
         android:icon="@drawable/ic_profile"
         android:title="Perfil" />
+    <item
+        android:id="@+id/analyticsFragment"
+        android:icon="@drawable/ic_analytics"
+        android:title="Análisis" />
 </menu>
